--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
-# TODO: Replace 'TOOL' with 'Python', 'Go', 'Node', etc.
-name: TOOL CI
+# TODO: Rename as 'Python CI', 'Go CI', 'Node CI', etc.
+name: CI
 
 on:
   push:
