--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 indent_style = space
 indent_size = 2
 
-# TODO: Use [*.{html,md} or [*.{py,md}] if relevant.
+# TODO: Use [*.{html,md} or [*.{md,py}] if needed.
 [*.md}]
 indent_size = 4
 
