--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,7 @@ on:
     branches: main
     paths-ignore:
       - "docs/**"
+
   pull_request:
     branches: main
     paths-ignore:
@@ -18,7 +19,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Python / Node / Ruby / Go / Rust / etc.
-        run: echo 'Setup environmen here'
+        run: echo 'Set up environment here'
 
       - name: Install dependencies
         run: make install
