--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-
+      - name: Checkout
+        uses: actions/checkout@v2
+   
+        # For ides, see https://michaelcurrin.github.io/workflow-builder/
       - name: Set up Python / Node / Ruby / Go / Rust / etc.
         run: echo 'Set up environment here'
 
